kubernetes-deployment.yaml
# --- BAZA DANYCH (PostgreSQL) ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - port: 5432
--- #to  wstrzykuje sekrety z Key Vaulta do backendu, więc musi być przed nim
apiVersion: secrets-store.csi.x-k8s.io/v1
kind: SecretProviderClass
metadata:
  name: zupa-secrets-provider
spec:
  provider: azure
  parameters:
    usePodIdentity: "false"
    useVMManagedIdentity: "true" 
    userAssignedIdentityID: "7d25ab4c-dc03-4b0e-b358-7b76d96b5ba7"
    keyvaultName: "vault-mojazuparg"
    tenantId: "62a550a1-e4d4-4a67-81d4-7304dd447d44"
    objects:  |
      array:
        - |
          objectName: DB-HOST
          objectType: secret
        - |
          objectName: DB-USER
          objectType: secret
        - |
          objectName: DB-PASSWORD
          objectType: secret
        - |
          objectName: DB-NAME
          objectType: secret
  secretObjects:
    - secretName: zupa-db-secrets
      type: Opaque
      data:
        - objectName: DB-HOST
          key: DB-HOST
        - objectName: DB-USER
          key: DB-USER
        - objectName: DB-PASSWORD
          key: DB-PASSWORD
        - objectName: DB-NAME
          key: DB-NAME
---
# --- BACKEND (Flask API) ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: mojazupaacr99.azurecr.io/backend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        # WSTRZYKNIĘCIE SEKRETÓW JAKO ZMIENNE
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "zupa-secrets-provider"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 5000
---
# --- FRONTEND (React + Nginx) ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: mojazupaacr99.azurecr.io/frontend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
---
# --- INGRESS (Inteligentny Router) ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Najpierw sprawdzamy API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
      # Potem cała reszta do frontendu
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
